added holding extractor job